[gd_scene load_steps=7 format=3 uid="uid://dmxxcirmtb4bt"]

[ext_resource type="Script" path="res://scripts/foca.gd" id="1_76ih2"]
[ext_resource type="Texture2D" uid="uid://6dlk8i8faqn8" path="res://img/FocaAtacandoSinFondo.png" id="2_7vase"]
[ext_resource type="Texture2D" uid="uid://dbsy1bppypvdt" path="res://img/FocaEstaticaSinFodno.png" id="2_qfq1f"]
[ext_resource type="Texture2D" uid="uid://3mom1sc8ci3a" path="res://img/FocaMovimientoSinFondo.png" id="3_skxvy"]

[sub_resource type="SpriteFrames" id="SpriteFrames_ll5d3"]
animations = [{
"frames": [{
"duration": 2.0,
"texture": ExtResource("2_7vase")
}, {
"duration": 2.0,
"texture": ExtResource("2_qfq1f")
}, {
"duration": 2.0,
"texture": ExtResource("2_7vase")
}, {
"duration": 2.0,
"texture": ExtResource("2_qfq1f")
}, {
"duration": 2.0,
"texture": ExtResource("2_7vase")
}, {
"duration": 2.0,
"texture": ExtResource("2_qfq1f")
}, {
"duration": 2.0,
"texture": ExtResource("2_7vase")
}, {
"duration": 2.0,
"texture": ExtResource("2_qfq1f")
}, {
"duration": 2.0,
"texture": ExtResource("2_7vase")
}],
"loop": true,
"name": &"Ataque",
"speed": 10.0
}, {
"frames": [{
"duration": 2.0,
"texture": ExtResource("2_qfq1f")
}, {
"duration": 2.0,
"texture": ExtResource("3_skxvy")
}, {
"duration": 2.0,
"texture": ExtResource("2_qfq1f")
}, {
"duration": 2.0,
"texture": ExtResource("3_skxvy")
}, {
"duration": 2.0,
"texture": ExtResource("2_qfq1f")
}, {
"duration": 2.0,
"texture": ExtResource("3_skxvy")
}, {
"duration": 2.0,
"texture": ExtResource("2_qfq1f")
}],
"loop": true,
"name": &"Moverse",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tkj1x"]
size = Vector2(25, 70)

[node name="foca" type="PathFollow2D"]
script = ExtResource("1_76ih2")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.359, 0.359)
sprite_frames = SubResource("SpriteFrames_ll5d3")
animation = &"Ataque"
frame = 6
frame_progress = 0.915559

[node name="Area2D" type="Area2D" parent="." groups=["focas"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-28.5, -3)
shape = SubResource("RectangleShape2D_tkj1x")

[node name="Timer" type="Timer" parent="."]

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
